--- a/web/Gemfile
+++ b/web/Gemfile
@@ -6,6 +6,7 @@ ruby '2.7.1'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails', branch: 'main'
 gem 'rails', '~> 6.1.3', '>= 6.1.3.2'
 gem 'bootstrap-sass', '3.3.7'
+gem 'bcrypt', '~> 3.1.6'
 # Use mysql as the database for Active Record
 gem 'mysql2', '~> 0.5'
 # Use Puma as the app server
